css/style.css
html, body {
    height: 100%;
    padding-top: 0px;
    padding-bottom: 0px;
    min-width: 700px;
    overflow: hidden;
    transition: background 1.5s linear;
}

.border-10 {
    border-width: 10px !important;
}

@font-face {
    font-family: 'Material Icons Two Tone';
    font-style: normal;
    font-weight: 400;
    src: local('Material Icons Two Tone'),
    local('MaterialIconsTwoTone-Regular'),
    url(../fonts/MaterialIconsTwoTone-Regular.woff2) format('woff2')
}

.material-icons-two-tone {
    font-family: 'Material Icons Two Tone';
    font-weight: normal;
    font-style: normal;
    font-size: 28px; /* Preferred icon size */
    font-display: block;
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    vertical-align: top;
    direction: ltr;
    padding-bottom: 0px;
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
}

.tick {
    font-size: 20px;
}

.arrow {
    font-size: 22px;
    vertical-align: top;
}

#spectrogram {
    position: absolute;
    width: 100%;
}

/*#fileNotLoaded {*/
/*    position: relative;*/
/*    font-size: calc(100% + 4vw);*/
/*    z-index: 0;*/
/*    width: 100%;*/
/*    text-align: center;*/
/*}*/

.navbar-nav li:hover > ul.dropdown-menu {
    display: block;
}

.dropdown-submenu {
    position: relative;
}

.dropdown-submenu > .dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
}

tr[id^="sub"] {
    font-size: 12px;
}

span[id^="filename_"] {
    border-bottom: 1px;
    border-bottom: #818182;
    left: 25px;
    z-index: 100;
}

.rotate {
    -moz-transition: all 0.2s linear;
    -webkit-transition: all 0.2s linear;
    transition: all 0.2s linear;
    cursor: pointer;
}

.rotate.down {
    transform: rotate(180deg);
}

.filename {
    margin-left: auto;
    margin-right: auto;
}

.pointer {
    cursor: pointer;
}

.openFiles {
    display: none;
}

.openFiles.visible {
    display: block;
}

#controlsWrapper .row, #transport-controls {
    min-width: 850px;
    white-space: nowrap;
    height: 40px;
    z-index: 6;
}


div#contentWrapper {
    background: #dbe2ed url(../img/Redwing-flight.png);
    background-size: cover;
    position: absolute;
    top: 50px;
    width: 100%;
}

.zoom {
    font-size: 22px;
}

.species-selector{
    position: relative;
}

.input {
    background-image: url('searchicon.png'); /* Add a search icon to input */
    background-position: 10px 12px; /* Position the search icon */
    background-repeat: no-repeat; /* Do not repeat the icon image */
    width: 100%; /* Fixed-width */
    font-size: 16px; /* Increase font-size */
    padding: 12px 20px 12px 40px; /* Add some padding */
    border: 1px solid #ddd; /* Add a grey border */
    margin-bottom: 3px; /* Add some space below the input */
}


ul {
    /* Remove default list styling */
    list-style-type: none;
    padding: 0;
    margin: 0;
    width: 100%;
}

.bird-list-wrapper{
    overflow: auto;
    max-height: 250px;
    position:absolute;
    width: 100%;
    z-index: 10;
}

.bird-list li a {
    border: 1px solid #ddd; /* Add a border to all links */
    margin-top: -1px; /* Prevent double borders */
    background-color: #f6f6f6; /* Grey background color */
    padding: 10px; /* Add some padding */
    text-decoration: none; /* Remove default text underline */
    font-size: 14px; /* Increase the font-size */
    color: black; /* Add a black text color */
    display: block; /* Make it into a block element to fill the whole list */
}
.bird-list li a:hover:not(.header){
    background-color: #eee; /* Add a hover effect to all links, except for headers */
}

/* make dropdown stick to row */
.table-active {
    overflow: visible;
    position: relative
}


#results>thead, #results>th {
    position: sticky;
    top:0;
    color: white;
    background-color: #1b1e21;
}

region.wavesurfer-region:before {
    content: attr(data-region-label);
    position: absolute;
    color: beige;
    background-color: rgba(266, 255, 236, 0.0);
    top: 0;
    padding-left: 5px;
}

region.wavesurfer-region[data-region-highlight] {
    border: 1px solid rgb(86, 180, 239);
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 2px 0px 8px rgba(266, 255, 236, 0.6);
}

.nighttime {
    background-color: rgba(0, 0, 72, 0.2);
}

.daytime {
    background-color: rgba(86, 180, 239, 0.2);
}

.strikethrough {
    text-decoration: line-through;
}

.table {
    margin-bottom: 0px;
}

/* Disable blue selection highlight in drag */
:not(input):not(textarea),
:not(input):not(textarea)::after,
:not(input):not(textarea)::before {
    user-select: none;
    /*cursor: default; */
}

/* Menu Dropdown on Hover */
.dropdown:hover .dropdown-menu.top-level {
    display: block;
    margin-top: 0;
/*remove the gap so it doesn't close*/
}

.chart-outer {
    height: 520px;
    margin: 0em 1em 1em;
    width: 100%;
    display: flex;
}

#chart-week {
    margin: 0em 1em 1em;
    height: 520px;
    width: 100%;
    display: flex;
    order: 1;
    margin-top: 30px;
}

.highcharts-data-table table {
    margin: 0em 1em 1em;
    display: block;
    max-width: 280px;
    overflow: auto;
}


.highcharts-data-table caption {
    display: none;
}

.highcharts-data-table th {
    font-weight: 600;
    padding: 0.5em;
}

.highcharts-data-table td,
.highcharts-data-table th,
.highcharts-data-table caption {
    padding: 0.5em;
}

.highcharts-data-table thead tr,
.highcharts-data-table tr:nth-child(even) {
    background: #f8f8f8;
}

.highcharts-data-table tr:hover {
    background: #f1f7ff;
}

.highcharts-background {
    opacity: 0.75;
}


/* Scrollbar */

/* width */
::-webkit-scrollbar {
    width: 0.5em;
    height: 0.5em;
}

/* Track */
::-webkit-scrollbar-track {
    border-radius: 0.25em;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: slategray;
    border-radius: 0.25em;
}


footer {
  position: fixed;
  bottom: 0;
  height: 30px;
  text-align: center;
  width: 100%;
}

/* round table borders

.rounded-border{
    border-radius: 10px;
    margin-top: 1px;
    overflow: hidden;
}
*/

/* Flip comment icons */

.add-comment, .edit-comment{
    transform: scaleX(-1);
}

